--- a/index.html
+++ b/index.html
@@ -15,6 +15,12 @@
     />
   </head>
   <body class="d-flex align-items-center py-4 bg-body-tertiary">
+    <div
+      class="card"
+      style="width: 40%; padding: 2rem"
+    >
+      <div class="card-body"></div>
+    </div>
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
