--- a/index.html
+++ b/index.html
@@ -19,7 +19,13 @@
       class="card"
       style="width: 40%; padding: 2rem"
     >
-      <div class="card-body"></div>
+      <div class="card-body">
+        <form
+          id="loginForm"
+          class="needs-validation"
+          novalidate
+        ></form>
+      </div>
     </div>
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
