--- a/index.html
+++ b/index.html
@@ -24,7 +24,32 @@
           id="loginForm"
           class="needs-validation"
           novalidate
-        ></form>
+        >
+          <div class="form-floating mb-3">
+            <input
+              type="email"
+              class="form-control"
+              id="email"
+              placeholder="name@example.com"
+              required
+            />
+            <label for="email">Email address</label>
+            <div class="invalid-feedback">
+              Please enter a valid email address.
+            </div>
+          </div>
+          <div class="form-floating mb-3">
+            <input
+              type="password"
+              class="form-control"
+              id="password"
+              placeholder="Password"
+              required
+            />
+            <label for="password">Password</label>
+            <div class="invalid-feedback">Please enter your password.</div>
+          </div>
+        </form>
       </div>
     </div>
     <script
