--- a/index.html
+++ b/index.html
@@ -13,45 +13,51 @@
       integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH"
       crossorigin="anonymous"
     />
+    <link
+      href="css/styles.css"
+      rel="stylesheet"
+    />
   </head>
   <body class="d-flex align-items-center py-4 bg-body-tertiary">
-    <div
-      class="card"
-      style="width: 40%; padding: 2rem"
-    >
-      <div class="card-body">
-        <form
-          id="loginForm"
-          class="needs-validation"
-          novalidate
-        >
-          <div class="form-floating mb-3">
-            <input
-              type="email"
-              class="form-control"
-              id="email"
-              placeholder="name@example.com"
-              required
-            />
-            <label for="email">Email address</label>
-            <div class="invalid-feedback">
-              Please enter a valid email address.
+    <main class="w-100 m-auto d-flex justify-content-center">
+      <div
+        class="card"
+        style="width: 40%; padding: 2rem"
+      >
+        <div class="card-body">
+          <form
+            id="loginForm"
+            class="needs-validation"
+            novalidate
+          >
+            <div class="form-floating mb-3">
+              <input
+                type="email"
+                class="form-control"
+                id="email"
+                placeholder="name@example.com"
+                required
+              />
+              <label for="email">Email address</label>
+              <div class="invalid-feedback">
+                Please enter a valid email address.
+              </div>
             </div>
-          </div>
-          <div class="form-floating mb-3">
-            <input
-              type="password"
-              class="form-control"
-              id="password"
-              placeholder="Password"
-              required
-            />
-            <label for="password">Password</label>
-            <div class="invalid-feedback">Please enter your password.</div>
-          </div>
-        </form>
+            <div class="form-floating mb-3">
+              <input
+                type="password"
+                class="form-control"
+                id="password"
+                placeholder="Password"
+                required
+              />
+              <label for="password">Password</label>
+              <div class="invalid-feedback">Please enter your password.</div>
+            </div>
+          </form>
+        </div>
       </div>
-    </div>
+    </main>
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
