--- a/index.html
+++ b/index.html
@@ -54,6 +54,14 @@
               <label for="password">Password</label>
               <div class="invalid-feedback">Please enter your password.</div>
             </div>
+            <div class="d-grid gap-2 d-md-flex justify-content-md-end">
+              <button
+                class="btn btn-outline-primary w-25 py-2"
+                type="submit"
+              >
+                Login
+              </button>
+            </div>
           </form>
         </div>
       </div>
