feat: adding register paragraph

--- a/index.html
+++ b/index.html
@@ -54,6 +54,10 @@
               <label for="password">Password</label>
               <div class="invalid-feedback">Please enter your password.</div>
             </div>
+            <p class="my-3">
+              Don't have an account?
+              <a href="./html/register.html">Register here</a>
+            </p>
             <div class="d-grid gap-2 d-md-flex justify-content-md-end">
               <button
                 class="btn btn-outline-primary w-25 py-2"
