--- a/index.html
+++ b/index.html
@@ -14,6 +14,10 @@
       crossorigin="anonymous"
     />
     <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css"
+    />
+    <link
       href="css/styles.css"
       rel="stylesheet"
     />
@@ -30,6 +34,7 @@
             class="needs-validation"
             novalidate
           >
+            <i class="bi bi-person login-icon"></i>
             <div class="form-floating mb-3">
               <input
                 type="email"
