feat: adding error message and login script

--- a/index.html
+++ b/index.html
@@ -59,6 +59,7 @@
               <label for="password">Password</label>
               <div class="invalid-feedback">Please enter your password.</div>
             </div>
+            <div id="loginError"></div>
             <p class="my-3">
               Don't have an account?
               <a href="./html/register.html">Register here</a>
@@ -80,5 +81,6 @@
       integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
       crossorigin="anonymous"
     ></script>
+    <script src="js/login.js"></script>
   </body>
 </html>
