--- a/html/user.html
+++ b/html/user.html
@@ -1,34 +1,44 @@
+```html
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    <!-- Character encoding for the document -->
     <meta charset="utf-8" />
+    <!-- Viewport settings to ensure proper scaling on mobile devices -->
     <meta
       name="viewport"
       content="width=device-width, initial-scale=1"
     />
+    <!-- Title of the document -->
     <title>User Profile</title>
+    <!-- Bootstrap CSS for styling -->
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
       rel="stylesheet"
       integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH"
       crossorigin="anonymous"
     />
+    <!-- Bootstrap Icons for icons used in the document -->
     <link
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css"
     />
+    <!-- Custom stylesheet for additional styling -->
     <link
       href="../css/styles.css"
       rel="stylesheet"
     />
   </head>
   <body class="user-body">
+    <!-- Navbar for user profile page -->
     <nav class="navbar navbar-expand-lg navbar-dark">
       <div class="container-fluid">
+        <!-- Display user email as the brand name -->
         <a
           class="navbar-brand"
           id="userEmail"
         ></a>
+        <!-- Logout button -->
         <div class="d-flex">
           <button
             class="btn btn-outline-light"
@@ -39,21 +49,27 @@
         </div>
       </div>
     </nav>
+    <!-- Container for user profile content -->
     <div class="container text-center user-content">
+      <!-- Display user name with hover effect -->
       <h1
         class="hover-effect"
         id="userName"
       ></h1>
+      <!-- Display user details with hover effect -->
       <h6
         class="hover-effect"
         id="userDetails"
       ></h6>
     </div>
+    <!-- Bootstrap Bundle JS for Bootstrap components functionality -->
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
       crossorigin="anonymous"
     ></script>
+    <!-- Custom JavaScript for user profile handling -->
     <script src="../js/user.js"></script>
   </body>
 </html>
+```
