--- a/index.html
+++ b/index.html
@@ -1,22 +1,29 @@
+```html
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    <!-- Character encoding for the document -->
     <meta charset="utf-8" />
+    <!-- Viewport settings to ensure proper scaling on mobile devices -->
     <meta
       name="viewport"
       content="width=device-width, initial-scale=1"
     />
+    <!-- Title of the document -->
     <title>Login</title>
+    <!-- Bootstrap CSS for styling -->
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
       rel="stylesheet"
       integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH"
       crossorigin="anonymous"
     />
+    <!-- Bootstrap Icons for icons used in the document -->
     <link
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css"
     />
+    <!-- Custom stylesheet for additional styling -->
     <link
       href="css/styles.css"
       rel="stylesheet"
@@ -24,17 +31,21 @@
   </head>
   <body class="d-flex align-items-center py-4 bg-body-tertiary">
     <main class="w-100 m-auto d-flex justify-content-center">
+      <!-- Card element to contain the login form -->
       <div
         class="card"
         style="width: 40%; padding: 2rem"
       >
         <div class="card-body">
+          <!-- Login form -->
           <form
             id="loginForm"
             class="needs-validation"
             novalidate
           >
+            <!-- User icon at the top of the form -->
             <i class="bi bi-person login-icon"></i>
+            <!-- Email input field with floating label -->
             <div class="form-floating mb-3">
               <input
                 type="email"
@@ -48,6 +59,7 @@
                 Please enter a valid email address.
               </div>
             </div>
+            <!-- Password input field with floating label -->
             <div class="form-floating mb-3">
               <input
                 type="password"
@@ -59,11 +71,14 @@
               <label for="password">Password</label>
               <div class="invalid-feedback">Please enter your password.</div>
             </div>
+            <!-- Element to display login error messages -->
             <div id="loginError"></div>
+            <!-- Link to the registration page -->
             <p class="my-3">
               Don't have an account?
               <a href="./html/register.html">Register here</a>
             </p>
+            <!-- Submit button for the form -->
             <div class="d-grid gap-2 d-md-flex justify-content-md-end">
               <button
                 class="btn btn-outline-primary w-25 py-2"
@@ -76,11 +91,14 @@
         </div>
       </div>
     </main>
+    <!-- Bootstrap Bundle JS for Bootstrap components functionality -->
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
       crossorigin="anonymous"
     ></script>
+    <!-- Custom JavaScript for form handling -->
     <script src="js/login.js"></script>
   </body>
 </html>
+```
